# VNAVC

./: .gitignore  Makefile  README.md  all_audiobook_urls.txt  main.py  metadata_book.csv  pyproject.toml  requirements.txt
data/: all_valid_book_urls.txt  valid_book_urls.txt
data/alignment/mat-biec/: outlier.txt  output.tsv
data/metadata/: able_download_metadata.csv  able_download_metadata.json  able_download_metadata_less_5_hour.csv  after_download_metadata.csv  metadata_book.csv  one_narrator_larger_3_hour.csv  one_narrator_larger_3_hour.txt  one_narrator_less_3_hour.csv  one_narrator_less_3_hour.txt  one_narrator_less_5_hour.csv  one_narrator_less_5_hour.txt  one_narrator_less_5_larger_3_hour.csv  one_narrator_less_5_larger_3_hour.txt  one_narrator_less_7_larger_5_hour.csv  one_narrator_less_7_larger_5_hour.txt
data/metadata/book/: 10-bai-hoc-tren-chiec-khan-an.json  10-bi-quyet-thanh-cong-cua-nhung-dien-gia-mc-tai-nang-nhat-the-gioi.json  10-dai-my-nhan-trung-quoc.json  10-dieu-khac-biet-nhat-giua-ke-giau-va-nguoi-ngheo.json  10-dieu-khac-biet-nhat-giua-ke-thang-va-nguoi-thua.json  10-dieu-tao-nen-so-phan.json  10-nghich-ly-cuoc-song.json  10-quy-luat-cuoc-song.json  10-quy-tac-cua-sam-walton.json  100-quy-luat-bat-bien-de-thanh-cong-trong-kinh-doanh.json  100-y-tuong-ban-hang-hay-nhat-moi-thoi-dai.json  100-y-tuong-tiep-thi-tuyet-hay.json  1001-buc-thu-viet-cho-tuong-lai.json  1001-y-tuong-dot-pha-trong-quang-cao.json  101-cach-day-con-thanh-tai.json  12-ky-an-trung-hoa.json  12-phuong-phap-khich-le-nhan-vien-tien-khong-lam-duoc.json  12-tuyet-ky-ban-hang.json  120-ngay-nhin-trom.json  14-bai-hoc-khoi-nghiep-jack-ma-danh-tang-cac-ban-tre.json  15-nam-cho-doi-chim-di-tru.json  200-cach-hanh-xu-trong-cuoc-song.json  21-nguyen-tac-vang-cua-nghe-thuat-lanh-dao.json  25-do-am.json  (+1311 more)
finetune/spark-tts/: README.md
finetune/spark_tts/: README.md  kaggle_finetune_notebook.ipynb
finetune/viXTTS/: config.json
notebook/: process_metadata_book.ipynb  query_book.ipynb
notebooks/: 5-gio-25-phut.json  alignment.ipynb  alignment_on_kaggle.ipynb  crawler_analysis.ipynb  download_analysis.ipynb  metadata_analysis.ipynb  mms_tts_vie.ipynb  narrator.ipynb  pre_processing_analysis.ipynb  prepare_alignment.ipynb  setup_dataset_finetune.ipynb
pipeline/crawler/: __init__.py  main.py
pipeline/processing/: audio.py  text.py
pipeline/utils/: __init__.py  audio.py  text.py
script/: download.py  pipe.sh
src/audio/: __init__.py
src/log/: __init__.py
tests/: test_alignment.py  test_crawler.py  test_split_audio.py  test_split_text.py
tts_data_pipeline/: __init__.py  constants.py  gradio_demo.py  prepare_dataset.py  push_to_hf.py
tts_data_pipeline/alignment/: README.md  __main__.py  aeneas_batch_align.py  aeneas_config.json  batch_align.py  config.json  main.py  mfa_batch_align.py  split.py  utils.py  whisper_qc.py
tts_data_pipeline/crawler/: README.md  __init__.py  __main__.py  download.py  main.py  metadata.py  metadata_config.json  playwright.py  playwright_server.py  start_playwright.sh  utils.py
tts_data_pipeline/pre_processing/: README.md  audio.py  config.json  main.py  metadata.py  process_all.py  text.py
tts_data_pipeline/utils/: __init__.py  audio.py  text.py
(+8 files in other folders)
