[project]
name = "tts-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "maturin>=1.8.2",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pydub>=0.25.1",
    "pypdf>=5.3.1",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "selectolax>=0.3.28",
    "setuptools>=75.8.2",
    "tqdm>=4.67.1",
    "underthesea>=6.8.4",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.8",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tts_data_pipeline"]
exclude = ["tests"]
