[project]
name = "tts-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "accelerate>=1.6.0",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "maturin>=1.8.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.5",
    "pip>=25.0.1",
    "playwright==1.51",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "seaborn>=0.13.2",
    "selectolax>=0.3.28",
    "setuptools>=75.8.2",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "underthesea>=6.8.4",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.9.8",
]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tts_data_pipeline"]
exclude = ["tests"]
