[project]
name = "tts-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "aiofiles>=24.1.0",
    "aiohttp>=3.10.11",
    "datasets>=3.1.0",
    "gdown>=5.2.0",
    "hf-xet>=1.1.5",
    "httpx>=0.28.1",
    "huggingface-hub>=0.33.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jiwer>=4.0.0",
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "loguru>=0.7.3",
    "matplotlib>=3.7.5",
    "maturin>=1.9.1",
    "num2words>=0.5.14",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "pip>=25.0.1",
    "playwright>=1.48.0",
    "py-spy>=0.4.0",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
    "pymupdf>=1.24.11",
    "pypdf>=5.7.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.3.2",
    "seaborn>=0.13.2",
    "selectolax>=0.3.29",
    "setuptools>=75.3.2",
    "soundfile>=0.13.1",
    "torchcodec>=0.4.0",
    "tqdm>=4.67.1",
    "transformers>=4.46.3",
    "typer>=0.16.0",
    "underthesea>=6.8.4",
    "wheel>=0.45.1",
]
[dependency-groups]
dev = [
    "ruff>=0.9.8",
]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tts_data_pipeline"]
exclude = ["tests"]
